--- a/app/src/main/res/layout/activity_question_detail.xml
+++ b/app/src/main/res/layout/activity_question_detail.xml
@@ -27,17 +27,7 @@
         android:src="@drawable/plus" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabOff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_margin="16dp"
-        android:src="@android:drawable/btn_star_big_off"
-        app:backgroundTint="@color/colorPrimaryDark" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabOn"
+        android:id="@+id/fabFavorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
