--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -9,7 +9,7 @@
     android:paddingRight="16dp"
     android:paddingTop="16dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="jp.techacademy.kousuke.koizumi.qa_app.MainActivity"
+    tools:context="jp.techacademy.kousuke.koizumi.qa_app.FavoriteActivity"
     tools:showIn="@layout/app_bar_main">
 
     <ListView
